Sun Jul 31 09:18:28 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 3.9.  Fixed `ri []`, stopdoc creating an
	  object reference, nodoc for class aliases, verbatim === lines.

Sun Jul 31 01:29:08 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_each_byte): remove unused variable e.

Sat Jul 31 01:23:45 2011  Kenta Murata  <mrkn@mrkn.jp>

	* test/bigdecimal/test_bigdecimal.rb (test_version): removed.

Sat Jul 30 23:19:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/default_gems: separate from tool/rbinstall.rb.

Sat Jul 30 23:14:44 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_each_byte): rbuf can be refreshed during yield.
	  [Bug #5119]

Sat Jul 30 22:35:50 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* strftime.c (NEEDS): avoid SEGV due to integer overflow in
	  sparc-solaris2.10 and i686-linux.  fix [Bug #4456] [ruby-dev:43284]

Sat Jul 30 17:26:26 2011  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_variant.rb: use skip method to skip the test.

	* test/win32ole/test_win32ole_variant_outarg.rb: ditto.

Sat Jul 30 14:27:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_version): version 1.1.0.

	* ext/bigdecimal/bigdecimal.gemspec: turn into a default gem.

	* tool/rbinstall.rb: ditto.

Sat Jul 30 11:21:55 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (ALT_STACK_SIZE): use MINSIGSTKSZ*2 instead of SIGSTKSZ*2.
	  [ruby-core:38607]

Sat Jul 30 10:39:14 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm.c (th_init): preallocate alternative stack.
	  NoMemoryError is better than rb_bug, of course.
	  Patch by Eric Wong. [ruby-core:38572][ruby-core:38594].

	* signal.c (rb_register_sigaltstack): ditto.

	* vm_core.h: moved ALT_STACK_SIZE definition from signal.c.
	* vm.c (thread_free): use xfree() instead of free().

Sat Jul 30 07:20:49 2011  Tanaka Akira  <akr@fsij.org>
